# local-ai

./: README.md  pyproject.toml
src/local_ai/: __init__.py  app.py
