[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local-ai"
version = "0.1.0"
description = "Terminal chat interface for local AI models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "qalarc", email = "qalarc@qalarc.com"}
]
keywords = ["ai", "ollama", "chat", "tui", "terminal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "textual>=0.47.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
]

[project.scripts]
local-ai = "local_ai.app:main"

[project.urls]
Homepage = "https://github.com/fivelidz/local-ai"
Repository = "https://github.com/fivelidz/local-ai"

[tool.hatch.build.targets.wheel]
packages = ["src/local_ai"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
]
